10/7: Problems 9-14 on the online homework are on material I ended up deciding not to cover last week.  Please feel free to skip them; I've set them up as "practice" problems so you won't be penalized.  Sorry. :(
10/3: Review materials for the first exam can now be found in the Exams tab.
9/26: The first Exam will be on <b>Wednesday, October 12th</b> and will cover Kinematics and Forces. Review material will be available here soon.
9/26: The audio for Monday Week 6's class did not record, so there are only written notes.  My apologies.
9/23: I've pushed the due date for the "Week 5" homework to Monday at noon, due to Homecoming etc.  The Week 6 assignment will still appear on Saturday as usual, and will be due next Saturday.
9/7: The quiz solutions are posted online under the Assignments tab. (The first page of the quiz document is the quiz without solutions in case you want to try it again sometime; the second page has the solutions.)
8/29: Our Pearson representative said that the registration system was broken over the weekend, but should be okay now.  If you had troubles registering or logging in, try again now. 
8/26: If you haven't registered with [www.masteringphysics.com Mastering Physics] yet, the code for our class is ADRIANPHYSICS101HILL16.  If you are having problems, please (a) let me know, and (b) contact Pearson customer support, (c) let me know if that resolves the matter, or if they don't respond quickly.
8/25: I've changed the due date for the first week's homework ("Week 1") on Mastering Physics to next Tuesday, to accommodate folks who have had trouble logging in.  The "Introduction" assignment will not be graded.
8/21: Towards the bottom of this page is the [http://hillbook.nfshost.com/01-Vectors/02-Adding.php vector addition] game I will show in class.
7/18: Welcome to Physics 101!   Please click on the Syllabus button above to learn more about the course.