@@ -75,6 +75,9 @@ activate:function(){Cookies.set("tab",$("#tabs").tabs("option","active"),{expire
 <h2>News</h2><ul>
 
 <li>
+`0/12: Exam solutions will be posted soon; exams will be graded by Monday at the latest.
+
+<li>
 <DIV class="updated">Posted 10/7:</DIV>
  Problems 9-14 on the online homework are on material I ended up deciding not to cover last week.  Please feel free to skip them; I've set them up as "practice" problems so you won't be penalized.  Sorry. :(
 <li>
@@ -120,7 +123,24 @@ activate:function(){Cookies.set("tab",$("#tabs").tabs("option","active"),{expire
 <TR><TH>#<TH>Starting
 <TH>Monday
 <TH>Wednesday
-<TH>Friday<!--7,7--><TR class="current"><TD class="weeknumber">7
+<TH>Friday<!--8,8--><TR class="current"><TD class="weeknumber">8
+<TD class="date">10/10
+<TD class="topic">Angular Motion	<TD class="chapter">Exam1
+
+<TD class="homework">&nbsp;
+	<BR>&nbsp;
+	<TD class="quiz">&nbsp;
+	<BR>&nbsp;
+	<TD>
+	&nbsp;<BR>
+	&nbsp;
+<TD>
+	&nbsp;<BR>
+	&nbsp;
+<TD>
+	&nbsp;<BR>
+	&nbsp;
+<TR><TD class="weeknumber">7
 <TD class="date">10/3
 <TD class="topic">Torque and Equilibrium	<TD class="chapter">7
 
