@@ -1,3 +1,4 @@
+`0/12: Exam solutions will be posted soon; exams will be graded by Monday at the latest.
 10/7: Problems 9-14 on the online homework are on material I ended up deciding not to cover last week.  Please feel free to skip them; I've set them up as "practice" problems so you won't be penalized.  Sorry. :(
 10/3: Review materials for the first exam can now be found in the Exams tab.
 9/26: The first Exam will be on <b>Wednesday, October 12th</b> and will cover Kinematics and Forces. Review material will be available here soon.
